[add] 3.2.2. Makefile作成